@@ -1,3 +1,7 @@
+2008-02-25    <Daddy@C-3PO>
+
+	* lib/WWW/Search/Ebay.pm (user_agent_delay): new method
+
 2008-02-24    <Daddy@C-3PO>
 
 	* lib/WWW/Search/Ebay/Motors.pm (result_count_pattern): new methods
